force-app/src/objects/fferpcore__MessagingPublication__c.object
<CustomObject>
    <customHelpPage>fferpcore__MessagingPublicationHelp</customHelpPage>
    <fields>
        <fullName>fferpcore__ActivationMethodData__c</fullName>
        <description>Additional information relating to the specified activation method.</description>
        <label>Activation Method Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ActivationMethod__c</fullName>
        <description>The activation method used to publish messages for this relationship.</description>
        <label>Activation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>automatic</fullName>
                    <label>Automatic</label>
                </value>
                <value>
                    <fullName>customCode</fullName>
                    <label>Custom Code</label>
                </value>
                <value>
                    <fullName>flow</fullName>
                    <label>Flow</label>
                </value>
                <value>
                    <fullName>button</fullName>
                    <label>Button</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__CorrelationField__c</fullName>
        <label>Correlation Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Custom__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether or not this publication has been made by the user.</description>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__DeclarativeFields__c</fullName>
        <label>Deprecated - Declarative Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__DeclarativeNodeCount__c</fullName>
        <label>Number of Declarative Node</label>
        <summaryForeignKey>fferpcore__DPNodeDeclaration__c.fferpcore__Publication__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fferpcore__Describer__c</fullName>
        <label>Describer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__DocumentationURL__c</fullName>
        <label>Documentation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fferpcore__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Accept messages from this publication.</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__Identifier__c</fullName>
        <inlineHelpText>Identifier of the publication. This must be unique for custom publications. If you do not enter a value, this field automatically set to a combination of the Publication Name and Source Object when you save the publication.</inlineHelpText>
        <label>Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__LinkControlDeveloperName__c</fullName>
        <description>Custom identifier used when enabling return data. Return data fields are identified by their API names, which include this developer name. We recommend that you do not update the developer name after enabling return data.</description>
        <inlineHelpText>This field must be populated to enable object linking. Subscription target objects that wish to link to this publication source object should have specifically named fields that include this Link Control Developer Name.</inlineHelpText>
        <label>Return Data Developer Name</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fferpcore__LinkControlFor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For return data publications only. Automatically populated lookup to the subscription that this return data publication relates to. Do not update this field manually.</description>
        <inlineHelpText>This field is populated automatically when a Link Control publication is created and should not be populated by the user.</inlineHelpText>
        <label>Return Data For</label>
        <referenceTo>fferpcore__MessagingSubscription__c</referenceTo>
        <relationshipLabel>Link Control Publications</relationshipLabel>
        <relationshipName>LinkControlPublications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__MessageType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Message Type</label>
        <referenceTo>fferpcore__MessageType__c</referenceTo>
        <relationshipLabel>Publications</relationshipLabel>
        <relationshipName>Publications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__Obsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No longer in use.</description>
        <inlineHelpText>Selecting Obsolete marks the publication as no longer in use. It will not appear on the administration screen and cannot be enabled.</inlineHelpText>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__OwnerProduct__c</fullName>
        <label>Publisher</label>
        <referenceTo>fferpcore__ERPProduct__c</referenceTo>
        <relationshipLabel>Publications</relationshipLabel>
        <relationshipName>MessagingPublications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fferpcore__ProductProxy__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Proxy</label>
        <referenceTo>fferpcore__ProductProxy__c</referenceTo>
        <relationshipLabel>Publications</relationshipLabel>
        <relationshipName>Publications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__SendingHook__c</fullName>
        <description>Name of the Apex class that determines the way in which messages are delivered. This class must implement the SendingHook interface.</description>
        <inlineHelpText>Name of the Apex class that determines the way in which messages are delivered. This class must implement the SendingHook interface.</inlineHelpText>
        <label>Sending Hook</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__SourceObject__c</fullName>
        <inlineHelpText>The object type that data will be taken from.</inlineHelpText>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__UniquenessConstraint__c</fullName>
        <label>Uniqueness Constraint</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fferpcore__UseProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Process Builder is used to trigger message delivery. When cleared, the trigger supplied with the publication is used. When selected, the process associated with the publication Identifier is used.</description>
        <inlineHelpText>Indicates whether Process Builder is used to trigger message delivery. When cleared, the trigger supplied with the publication is used. When selected, the process associated with the publication Identifier is used.</inlineHelpText>
        <label>Use Process Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__VirtualObjectProvider__c</fullName>
        <label>Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__VirtualObject__c</fullName>
        <label>Virtual Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Publication</label>
    <nameField>
        <label>Publication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>